# cm-bump

./: Cargo.toml  Dockerfile
examples/: objects.yaml
examples/custom-image/: README.txt
examples/custom-image/haproxy/: Dockerfile  build.sh  entrypoint.sh
examples/custom-image/nginx/: Dockerfile  build.sh  entrypoint.sh  root.conf
examples/sidecar/demo/: objects.yaml  payload.yaml
src/: bumper.rs  main.rs  operator.rs  updater.rs
