[package]
name = "cm-bump"
version = "0.1.0"
authors = ["Lukas Krejci <lkrejci@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.33.0"
kube-derive = "0.33.0"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
tokio = { version = "0.2.17", features = ["full"] }
futures = "0.3"
serde = "1.0"
thiserror = "1.0.16"
sha1 = "0.6.0"
openssl = { version = "0.10", features = ["vendored"] }
nix = "0.17.0"